# ha-electrolux

./: .coverage  .gitignore  .pre-commit-config.yaml  944188772.txt  AGENTS.md  CODEOWNERS  LICENSE  LOGGING_IMPROVEMENTS.md  README.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.00.md  RELEASE_NOTES_v3.2.00.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.3.md  RELEASE_NOTES_v3.2.4.md  RELEASE_NOTES_v3.2.6.md  RELEASE_NOTES_v3.2.9.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.3.1.md  RELEASE_NOTES_v3.3.3.md  RELEASE_NOTES_v3.3.4.md  STEAM_OVEN_FIX.md  TEST_ANALYSIS_REPORT.md  ac.txt  audit_binary.py  coverage.json  coverage_output.txt  coverage_report.txt  diagnostic.json  fix_josepy.py  fix_urls.py  hacs.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements_test.txt  temp_class.txt  token_manager.txt  (+2 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
release_notes/: RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.3.md  RELEASE_NOTES_v3.2.4.md  RELEASE_NOTES_v3.2.5.md  RELEASE_NOTES_v3.2.6.md  RELEASE_NOTES_v3.2.7.md  RELEASE_NOTES_v3.2.8.md  RELEASE_NOTES_v3.2.9.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.3.1.md  RELEASE_NOTES_v3.3.2.md  RELEASE_NOTES_v3.3.3.md  RELEASE_NOTES_v3.3.4.md  RELEASE_NOTES_v3.3.5.md  RELEASE_NOTES_v3.3.6.md  RELEASE_NOTES_v3.3.7.md  RELEASE_NOTES_v3.3.8.md  RELEASE_NOTES_v3.3.9.md  RELEASE_NOTES_v3.4.0.md  RELEASE_NOTES_v3.4.1.md  RELEASE_NOTES_v3.4.2.md  RELEASE_NOTES_v3.4.3.md  RELEASE_NOTES_v3.4.4.md  RELEASE_NOTES_v3.4.5.md  RELEASE_NOTES_v3.4.6.md  RELEASE_NOTES_v3.4.7.md  RELEASE_NOTES_v3.4.8.md  (+27 more)
(+135 files in other folders)
