[project]
name = "ha-electrolux"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = [
    "homeassistant",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "aiohttp>=3.14.1,<4.0.0",
    "pyjwt>=2.13.0,<3.0.0",
    "electrolux-group-developer-sdk",
    "mypy>=1.0.0",
    "ruff>=0.11.0",
    "black>=25.0.0",
]
dev = [
    "aiohttp>=3.14.1,<4.0.0",
    "deep_translator",
    "pydantic>=2.11.5,<3.0.0",
    "electrolux-group-developer-sdk",
    "pre-commit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"
