[project]
name = "ha-electrolux"
version = "0.0.0"
requires-python = ">=3.14.2,<3.15"

[dependency-groups]
# Prefer the newest compatible releases within the supported compatibility ranges.
test = [
    "homeassistant>=2026.7.3,<2027.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.0.0",
    "aiohttp>=3.14.1,<4.0.0",
    "pyjwt>=2.12.1,<3.0.0",
    "electrolux-group-developer-sdk",
    "mypy>=2.3.0",
    "ruff>=0.15.22",
    "black>=25.0.0",
]
dev = [
    "aiohttp>=3.14.1,<4.0.0",
    "deep_translator",
    "pydantic>=2.13.4,<3.0.0",
    "electrolux-group-developer-sdk",
    "pre-commit",
]

[tool.black]
target-version = ["py314"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"
